Stretching bug solved. All slides now are automatically centered when not stretched. First image now showing only once instead of twice in a row, counter calculation bug. More than vife slides can now be shown in the 'Add Image Slide' search popup.
git-svn-id: https://plugins.svn.wordpress.org/slideshow-jquery-image-gallery/trunk@596412 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style/SlideshowPlugin/functional.css
+++ b/style/SlideshowPlugin/functional.css
@@ -12,9 +12,7 @@
 .slideshow_container img {
 	max-width: 100%;
 	max-height: 100%;
-	width: 100%;
 	height: 100%;
-	width: auto;
 	border: none;
 }
 
@@ -22,6 +20,7 @@
 	height: 100%;
 	float: left;
 	overflow: hidden;
+	text-align: center;
 }
 
 .slideshow_container .transparent {
